fixed phase distinction slide

--- a/2025-berkeley-seminar-substrate-and-laws/config.toml
+++ b/2025-berkeley-seminar-substrate-and-laws/config.toml
@@ -2,3 +2,4 @@ src = "src/slides.dj"
 template = "src/slide.html"
 out = "out"
 static = "static"
+deploy = "owenlynch.org:/var/www/owenlynch.org/deployed/archive/2025-berkeley-seminar-substrate-and-laws"
