--- a/deck/Cargo.toml
+++ b/deck/Cargo.toml
@@ -20,3 +20,4 @@ toml = "0.9.7"
 tower-http = { version = "0.6.6", features = ["fs", "trace"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
+webbrowser = "1.0.5"
